--- a/Neocom.WebUI/src/app/components/ui/action-bar/action-bar.component.html
+++ b/Neocom.WebUI/src/app/components/ui/action-bar/action-bar.component.html
@@ -1,4 +1,7 @@
 <!-- <div id="panelborder-red"> -->
-<div>
-  ACTION BAR
+<!-- <div> -->
+<div class="title-box" id="panelborder-orange">
+  <div class="title">{{title}}</div>
+  <div class="subtitle">{{subtitle}}</div>
 </div>
+<!-- </div> -->
