--- a/Neocom.WebUI/src/app/components/model/pilot4detail/pilot4detail.component.html
+++ b/Neocom.WebUI/src/app/components/model/pilot4detail/pilot4detail.component.html
@@ -48,7 +48,7 @@
         </div>
         <div>
           <span class="neocom-label" id="neocom-ts12">ACCOUNT STATUS</span><br>
-          <span class="neocom-pilot-data neocom-data-size-14">{{pilot.characterSheet.cloneName}}</span><br>
+          <!-- <span class="neocom-pilot-data neocom-data-size-14">{{pilot.characterSheet.cloneName}}</span><br> -->
           <span class="" id="neocom-ts14" style="color:red">Expired</span><br>
         </div>
       </td>
