-Added a new component to draw the Pilot managers but not from doanloaded data. -Finishing the Pilot Detail page composition.
Former-commit-id: 3ea408fcd446e201f6d68618e375db2c890e1986

--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -1,16 +1,17 @@
-<div>
-  <!-- <div> -->
-  <neocom-action-bar [title]="getTitleData()" [subtitle]="getSubtitleData()"></neocom-action-bar>
-  <!-- </div> -->
-  <div style="width: 60%; float:left">
-    <!-- <div class="title-box" id="panelborder-orange">
+<!-- <div> -->
+<!-- <div> -->
+<neocom-action-bar [title]="getTitleData()" [subtitle]="getSubtitleData()"></neocom-action-bar>
+<!-- </div> -->
+<div style="width: 60%">
+  <!-- <div class="title-box" id="panelborder-orange">
       <div class="title">Pilot Details</div>
       <div class="subtitle" *ngIf="!downloading">Selected: {{pilot.name}}</div>
     </div> -->
-    <neocom-pilot4-detail *ngIf="!downloading" [pilot]="pilot"></neocom-pilot4-detail>
-    <neocom-separator [viewer]="getViewer()" [node]="headerSeparator"></neocom-separator>
-  </div>
-  <div style="width: 40%; float:right">
-    <neocom-detailed-container [selectedNode]="getSelectedNode()"></neocom-detailed-container>
-  </div>
+  <neocom-pilot4-detail *ngIf="!downloading" [pilot]="pilot"></neocom-pilot4-detail>
+  <!-- <neocom-separator [viewer]="getViewer()" [node]="headerSeparator"></neocom-separator> -->
+  <neocom-manager4pilot [manager]="getFittingManager()"></neocom-manager4pilot>
 </div>
+<!-- <div style="width: 40%; float:right"> -->
+<!-- <neocom-detailed-container [selectedNode]="getSelectedNode()"></neocom-detailed-container> -->
+<!-- </div> -->
+<!-- </div> -->
