--- a/Neocom.WebUI/src/assets/styles.css
+++ b/Neocom.WebUI/src/assets/styles.css
@@ -143,6 +143,10 @@ body {
   height: 32px;
   width: 32px;
 }
+#iconsize-36 {
+  height: 36px;
+  width: 36px;
+}
 
 #iconsize-48 {
   height: 48px;
