-Added and connected the Fitting Manager Page. -[WIP] Developing the contents of the Fitting list by processing the fitting data received from the backend.
Former-commit-id: f673c1f1ff11df6c69c169a3edf2c7f5b2a12ff8

--- a/Neocom.WebUI/src/app/components/model/manager4pilot/manager4pilot.component.html
+++ b/Neocom.WebUI/src/app/components/model/manager4pilot/manager4pilot.component.html
@@ -10,5 +10,7 @@
 </div> -->
 <div class="neocom-panel" id="panelborder-orange">
   <img class="neocom-pilot-avatar" src="/assets/res-window/drawable/fittingmanagement.png" id="iconsize-36">
+  <a class="no-underline" [routerLink]="['/pilot',getAccountId(),'fittingmanager']">
   <span class="neocom-selectable-name">{{manager.name}}</span>
+</a>
 </div>
