--- a/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
+++ b/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
@@ -1,7 +1,8 @@
 <div class="neocom-panel-container">
-  <div *ngFor="let render of getBodyComponents()">
-    <neocom-separator *ngIf="render.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="render"></neocom-separator>
-    <neocom-credential *ngIf="render.jsonClass == 'Credential'" [viewer]="getViewer()" [node]="render" (mouseenter)="mouseEnter(render)"></neocom-credential>
+  <div *ngFor="let node of getBodyComponents()">
+    <neocom-separator *ngIf="node.jsonClass == 'Separator'" [viewer]="getViewer()" [node]="node"></neocom-separator>
+    <neocom-credential *ngIf="node.jsonClass == 'Credential'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-credential>
+    <neocom-group-container *ngIf="node.jsonClass == 'GroupContainer'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-group-container>
     <!-- <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'NeoComCharacter'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'Pilot'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
