--- a/Neocom.WebUI/src/app/components/separator/separator.component.css
+++ b/Neocom.WebUI/src/app/components/separator/separator.component.css
@@ -2,7 +2,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px red solid;
   box-shadow: inset 0px 0px 4px 1px red, 0px 0px 4px 1px red;
 }
@@ -11,7 +11,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px orange solid;
   box-shadow: inset 0px 0px 4px 1px orange, 0px 0px 4px 1px orange;
 }
@@ -20,7 +20,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px yellow solid;
   box-shadow: inset 0px 0px 4px 1px yellow, 0px 0px 4px 1px yellow;
 }
@@ -29,7 +29,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px green solid;
   box-shadow: inset 0px 0px 4px 1px green, 0px 0px 4px 1px green;
 }
@@ -37,7 +37,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px blue solid;
   box-shadow: inset 0px 0px 4px 1px blue, 0px 0px 4px 1px blue;
 }
@@ -46,7 +46,7 @@
   height: 4px;
   line-height: 1.0;
   opacity: 0.7;
-  width: 60%;
+  /* width: 60%; */
   border: 1px red solid;
   box-shadow: inset 0px 0px 4px 1px red, 0px 0px 4px 1px red;
 }
