-Updated the style for the node name. -Added a new EveItem field to classify the hulls. This is used to locate the right hull group icon.
Former-commit-id: 53451b9c6c932113aac66c99751283cd084d3b54

--- a/Neocom.WebUI/src/app/components/model/credential/credential.component.html
+++ b/Neocom.WebUI/src/app/components/model/credential/credential.component.html
@@ -10,7 +10,7 @@
         </td>
         <!-- RIGHT BLOCK -->
         <td width="20%" class="neocom-panel-right-box" align="right ">
-          <div class="neocom-account-class">CREDENTIAL</div>
+          <div class="neocom-classname">CREDENTIAL</div>
           <div class="stack-counter">{{node.accountId}}</div>
         </td>
         <!-- MENU BLOCK -->
