--- a/Neocom.WebUI/src/app/components/model/group-container/group-container.component.html
+++ b/Neocom.WebUI/src/app/components/model/group-container/group-container.component.html
@@ -10,7 +10,7 @@
       </td>
       <!-- RIGHT BLOCK -->
       <td width="20%" class="neocom-panel-right-box" align="right ">
-        <div class="neocom-account-class">SHIP GROUP</div>
+        <div class="neocom-classname">SHIP GROUP</div>
         <div class="stack-counter">{{getContentCount()}}</div>
       </td>
       <!-- MENU BLOCK -->
