--- a/Neocom.WebUI/src/assets/styles.css
+++ b/Neocom.WebUI/src/assets/styles.css
@@ -196,10 +196,10 @@ body {
 }
 
 .neocom-classname {
-  color: #0000FF;
-  font-size: 16px;
+  color: #3D3DE6;
+  font-size: 12px;
   font-weight: 500;
-  text-shadow: 0px 0px 2px #0000FF;
+  text-shadow: 0px 0px 2px #3D3DE6;
 }
 
 .neocom-classname-white {
