-[WIP] Added the lat FittingItem component to draw the modules that compose the Fitting. -Dividing the INeoComNode into two interfaces. -New functionality that is common to all node classes like the type id or the location of the eve icon. -Created the collaboration functionality for the Fitting.
Former-commit-id: 8b81646ecbd98ab9f3e29d620f4c58d3aa741e4d

--- a/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
+++ b/Neocom.WebUI/src/app/components/factory/component-factory/component-factory.component.html
@@ -4,6 +4,7 @@
     <neocom-credential *ngIf="node.jsonClass == 'Credential'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-credential>
     <neocom-group-container *ngIf="node.jsonClass == 'GroupContainer'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-group-container>
     <neocom-fitting *ngIf="node.jsonClass == 'Fitting'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-fitting>
+    <neocom-fitting-item *ngIf="node.jsonClass == 'FittingItem'" [viewer]="getViewer()" [node]="node" (mouseenter)="mouseEnter(node)"></neocom-fitting-item>
     <!-- <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [viewer]="getViewer()" [node]="render"></neocom-login4-list>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'NeoComCharacter'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
     <neocom-pilot4-login *ngIf="render.jsonClass == 'Pilot'" [viewer]="getViewer()" [node]="render"></neocom-pilot4-login>
