--- a/Neocom.WebUI/src/app/components/model/fitting/fitting.component.html
+++ b/Neocom.WebUI/src/app/components/model/fitting/fitting.component.html
@@ -2,7 +2,7 @@
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <!-- <a class="no-underline" [routerLink]="['/pilot',node.getAccountId()]"> -->
     <tr>
-      <td><img class="neocom-icon" src="{{getGroupIconReference()}}" id="iconsize-36"></td>
+      <td><img class="neocom-icon" src="{{loadNodeIcon()}}" id="iconsize-36"></td>
       <td width="80% " class="neocom-panel-column">
         <div>
           <span class="neocom-selectable-name" id="neocom-ts20">{{node.name}}</span><br>
