--- a/Neocom.WebUI/src/app/components/asset/asset.component.html
+++ b/Neocom.WebUI/src/app/components/asset/asset.component.html
@@ -9,7 +9,7 @@
           <div class="neocom-selectable-name">{{node.name}}</div>
           <div class="neocom-data imaki-ff">[{{node.assetID}}]-{{node.category}}/{{node.groupName}}</div>
           <div class="neocom-data imaki-ff">
-            <span class="neocom-data mons-olympia-ff neocom-ts16 left-data">{{node.item.baseprice | number:'1.2-2'}} ISK</span>
+            <span class="neocom-data mons-olympia-ff neocom-ts16 left-data">{{node.getPrice() | number:'1.2-2'}} ISK</span>
             <span class="neocom-data mons-olympia-ff neocom-ts16 right-data">{{totalValueIsk() | number:'1.0-0'}} ISK</span>
           </div>
           <div class="lined-bottomline">&nbsp;</div>
