-Added fontawesome to have access to a set of interesting icons. -Completed the welcome page with the button to start the authorization process. -Authorization process in place. The code will be intercepted by the verification page and converted in a database credential on the backend. -Added to the compilation list all the modules required for authentication and http connections. -Restarted the development on the Application Model Store. -Completed the index page to have a header identical to the application header.
Former-commit-id: 53686e62c6bcd5247e0eaf09ff4c2698862d7cdb

--- a/NeoCom.Incubation/src/assets/fonts/Proxima/proxima-font-definition.css
+++ b/NeoCom.Incubation/src/assets/fonts/Proxima/proxima-font-definition.css
@@ -32,7 +32,7 @@
     font-family: 'Proxima Nova';
     src: url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.eot');
     src: url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.woff2') format('woff2'),
+         /* url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.woff2') format('woff2'), */
          url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.woff') format('woff'),
          url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.ttf') format('truetype'),
          url('/assets/fonts/Proxima/Mark Simonson - Proxima Nova Alt Regular-webfont.svg#proxima_nova_altregular') format('svg');
