--- a/NeoCom.Incubation/src/styles/panel-styles.scss
+++ b/NeoCom.Incubation/src/styles/panel-styles.scss
@@ -21,7 +21,7 @@ $panel-corner-marker-displacement: -1px; //--- P A N E L S
 
 .neocom-panel {
   background-color: $panel-background-color;
-  font-family     : $panel-default-font;
+  // font-family     : $panel-default-font;
   height          : auto;
   line-height     : $neocom-line-height;
   margin          : $panel-margin;
