--- a/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.html
+++ b/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.html
@@ -1,1 +1,22 @@
-<neocom-header></neocom-header>
+<div fxLayout="row">
+  <div style="width: 60%; display: inline-block;">
+    <neocom-header></neocom-header>
+  </div>
+  <div style="width: 40%; float: right;">
+    <div class="neocom-panel header-box" id="panelborder-white">
+      <span class="proxima-black-ff">SERVER DATA BLOCK</span>
+    </div>
+  </div>
+</div>
+<neocom-action-bar [title]="'WELCOME'" [subtitle]="getDescription()"></neocom-action-bar>
+<div class="login-box">
+  <div>
+    <a class="btn btn-outline-primary btn-lg btn-block button-size" (click)="launchLogin()">
+      <div *ngIf="!working">ESI Authorization</div>
+      <div *ngIf="working" class="login-box">
+        <span class="validating-label">Validating Authorization...</span>
+        <fa name="cog" animation="spin" size="1x"></fa>
+      </div>
+    </a>
+  </div>
+</div>
