-[PROJECT] New branch to generate a new POC for login isolation and secure access to a common backend server. -New integration with the DataManagement and more secure isolation for the Model classes. -POC development for the new RSA secure session service.
Former-commit-id: 351b87339e82dfbf9f1daea3ad69282c3b91ae24

--- a/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.html
+++ b/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.html
@@ -4,7 +4,7 @@
   </div>
   <div style="width: 40%; float: right;">
     <div class="neocom-panel header-box" id="panelborder-white">
-      <span class="proxima-black-ff">SERVER DATA BLOCK</span>
+      <span class="proxima-black-ff" style="padding: 2px;">SERVER DATA BLOCK</span>
     </div>
   </div>
 </div>
