--- a/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.scss
+++ b/NeoCom.Incubation/src/app/pages/welcome-page/welcome-page.component.scss
@@ -12,6 +12,8 @@
   margin-top     : 30px;
   padding-top    : 20px;
   width          : 400px;
+  border-radius: 8px;
+    border-width: 3px;
 }
 
 .validating-label {
