--- a/NeoCom.Incubation/src/app/pages/validate-authorization-page/validate-authorization-page.component.html
+++ b/NeoCom.Incubation/src/app/pages/validate-authorization-page/validate-authorization-page.component.html
@@ -6,9 +6,10 @@
   <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
     <!-- <a class="no-underline" style="color: white;" [routerLink]="['/authorizationprogress']"> -->
     <tr>
-      <td><img class="" src="/assets/ui/drawable/defaulticonplaceholder.png" id="iconsize-36"></td>
+      <td><img class="" src="/assets/res-window/drawable/defaulticonplaceholder.png" id="iconsize-36"></td>
       <td width="80% " class="neocom-panel-column">
         <div>
+          &nbsp;<fa name="cog" animation="spin" size="1x"></fa>&nbsp;
           <span class="" id="neocom-ts16">Processing credential validation.</span><br>
         </div>
       </td>
