-Replacing old Toast by a new A ngular 5 implementation. -Added a new Pilot dashboard to the new multiuser project called Infinity. -Starting to upgrade the PilotController to adapt to the new authorization flow. I need to check the request comes from an authorized session. -Removed seed data because it is now irrelevant.
Former-commit-id: 2dcbee0678b2e1667ebece9f0b5c4f3fc7a5228a

--- a/NeoCom.Incubation/src/app/pages/validate-authorization-page/validate-authorization-page.component.html
+++ b/NeoCom.Incubation/src/app/pages/validate-authorization-page/validate-authorization-page.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 </div>
-<neocom-action-bar [title]="'VALIDATION'" [subtitle]="'Verification credential generation'"></neocom-action-bar>
+<neocom-action-bar [title]="'VALIDATION'" [subtitle]="'Verification for credential generation'"></neocom-action-bar>
 <div class="neocom-panel neocom-panel-container" id="panelborder-white">
   <div class="neocom-selectable-name" id="neocom-ts18">{{code}}</div>
 </div>
