--- a/NeoCom.Infinity/src/styles/font-styles.css
+++ b/NeoCom.Infinity/src/styles/font-styles.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('/assets/fonts/Proxima Nova Alt Bold.ttf') format('truetype');
+  src: url('/assets/fonts/Proxima Nova Bold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
@@ -32,14 +32,14 @@
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('/assets/fonts/Proxima Nova Alt Regular.ttf') format('truetype');
+  src: url('/assets/fonts/Proxima Nova Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Proxima Nova';
-  src: url('/assets/Proxima Nova Thin.ttf') format('truetype');
+  src: url('/assets/fonts/Proxima Nova Thin.ttf') format('truetype');
   font-style: normal;
   font-weight: 100;
 }
