-New update to Angular 6 configuration. Application is empty. Just styles and assets added to compilation. -Created the AppModel service file even empty of content. -New header block starting to be added to files.
Former-commit-id: 16f4ef8d98a3ccc7a3192b37f58ac0a626b881b6

--- a/NeoCom.Infinity/src/styles.scss
+++ b/NeoCom.Infinity/src/styles.scss
@@ -8,7 +8,7 @@
 //               SpringBoot technology and finally the web ui code made in typescript within the Angular
 //               framework.
 //-- ADDITIONAL MODULES STYLES
-@import "~bootstrap/scss/bootstrap";  // From the boostrap module.
+// @import "~bootstrap/scss/bootstrap";  // From the boostrap module.
 @import './styles/toaster.css'; // angular5-toaster module additional styles
 
 //--- APPLICATION STYLE VARIABLES
