--- a/NeoCom.Infinity/src/app/app.component.html
+++ b/NeoCom.Infinity/src/app/app.component.html
@@ -6,5 +6,5 @@
     <!-- <ui-server-status></ui-server-status> -->
   </div>
 </div>
-<!-- <toaster-container [toasterconfig]="toasterconfig"></toaster-container> -->
+<simple-notifications [options]="options" (onCreate)="created($event)" (onDestroy)="destroyed($event)"></simple-notifications>
 <router-outlet></router-outlet>
