--- a/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.html
+++ b/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.html
@@ -1,11 +1,11 @@
-<neocom-action-bar [title]="'WELCOME'" [subtitle]="getDescription()"></neocom-action-bar>
+<neocom-action-bar [titleLeft]="'WELCOME'" [subtitle]="getDescription()"></neocom-action-bar>
 <div class="login-box">
   <div>
     <a class="btn btn-outline-primary btn-lg btn-block button-size" (click)="launchLogin()">
       <div *ngIf="!working">ESI Authorization</div>
       <div *ngIf="working" class="login-box">
         <span class="validating-label">Validating Authorization...</span>
-        <fa name="cog" animation="spin" size="1x"></fa>
+        <!-- <fa name="cog" animation="spin" size="1x"></fa> -->
       </div>
     </a>
   </div>
