--- a/NeoCom.Infinity/src/app/modules/ui/action-bar/action-bar.component.html
+++ b/NeoCom.Infinity/src/app/modules/ui/action-bar/action-bar.component.html
@@ -1,4 +1,4 @@
 <div class="neocom-panel title-box" id="panelborder-orange">
-  <div class="title">{{title}}</div>
+  <div class="title">{{titleLeft}}</div>
   <div class="subtitle">{{subtitle}}</div>
 </div>
