--- a/NeoCom.Infinity/src/styles.scss
+++ b/NeoCom.Infinity/src/styles.scss
@@ -11,7 +11,7 @@
 // @import "~bootstrap/scss/bootstrap";  // From the boostrap module.
 @import './styles/toaster.css'; // angular5-toaster module additional styles
 
-//--- APPLICATION STYLE VARIABLES
+//--- APPLICATION STYLES VARIABLES
 @import "./styles/_scss_variables.scss";
 //--- APPLICATION STYLE PACKS
 @import "./styles/font-styles.css";
