--- a/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.scss
+++ b/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.scss
@@ -1,3 +1,12 @@
+//--- APPLICATION STYLES VARIABLES
+@import "app/../styles/_scss_variables.scss";
+
+.authorization-button {
+  background-color: $marked-name-color;
+  border-radius   : 10px;
+  // padding-top: 50px;
+}
+
 .login-box {
   display        : flex;
   justify-content: center;
@@ -7,13 +16,11 @@
   display        : flex;
   font-size      : 30px;
   font-weight    : 800;
-  height         : 120px;
+  height         : 100px;
   justify-content: center;
-  margin-top     : 30px;
-  padding-top    : 20px;
+  margin-top     : 50px;
+  padding-top    : 50px;
   width          : 400px;
-  border-radius: 8px;
-    border-width: 3px;
 }
 
 .validating-label {
@@ -21,4 +28,12 @@
   font-weight : 600;
   margin-right: 10px;
   margin-top  : 10px;
+}
+
+.welcome-message {
+  font-size   : 24px;
+  margin-left : 30px;
+  margin-right: 50px;
+  margin-top  : 10px;
+  padding-top : 10px;
 }
