-[INFINITY] Adding storage and bootstrap to use the boostrap styles. -[INFINITY] Reorganization of the code to start running the first page. Creating the class and interface scaffolding for development placement. -[INFINITY] Restarting the application component to trim out all not used code. Action Bar is left to the page. -[INFINITY] Upgraded the environment.
Former-commit-id: acbe6f61ff42c0d095cde994008916ef40e9f120

--- a/NeoCom.Infinity/src/styles.scss
+++ b/NeoCom.Infinity/src/styles.scss
@@ -8,7 +8,8 @@
 //               SpringBoot technology and finally the web ui code made in typescript within the Angular
 //               framework.
 //-- ADDITIONAL MODULES STYLES
-// @import "~bootstrap/scss/bootstrap";  // From the boostrap module.
+@import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+@import "~font-awesome/css/font-awesome.css"; // additional styles from fontawesome
 @import './styles/toaster.css'; // angular5-toaster module additional styles
 
 //--- APPLICATION STYLES VARIABLES
