--- a/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.scss
+++ b/NeoCom.Infinity/src/app/modules/authentication/welcome-page/welcome-page.component.scss
@@ -1,26 +1,48 @@
 //--- APPLICATION STYLES VARIABLES
 @import "app/../styles/_scss_variables.scss";
 
-.authorization-button {
-  background-color: $marked-name-color;
-  border-radius   : 10px;
-  // padding-top: 50px;
+// B U T T O N    S T Y L E S
+.button-size {
+  line-height: 3;
+  font-size      : 30px;
+  font-weight    : 800;
+  height         : 120px;
+  // justify-content: center;
+  margin-top     : 50px;
+  // padding-top    : 50px;
+  width          : 400px;
 }
+.authorization-button {
+  background-color: #A0EA7B;
+  border-radius   : 10px;
+  color:white;
+}
+.authorization-button:hover {
+  background-color: #50B71D;
+}
+
+.submit-button {
+  margin-left  : 30px;
+  width        : 50%;
+  font-size    : 24px;
+  line-height  : 3;
+  margin-bottom: 20px;
+}
+
+
+.button-position {
+  margin-left: 30px;
+  margin-top : 80px;
+  width      : 50%;
+  font-size  : 24px;
+  line-height: 3;
+}
+
+
 
 .login-box {
   display        : flex;
   justify-content: center;
-}
-
-.button-size {
-  display        : flex;
-  font-size      : 30px;
-  font-weight    : 800;
-  height         : 100px;
-  justify-content: center;
-  margin-top     : 50px;
-  padding-top    : 50px;
-  width          : 400px;
 }
 
 .validating-label {
