--- a/NeoCom.Infinity/src/app/modules/ui/action-bar/action-bar.component.scss
+++ b/NeoCom.Infinity/src/app/modules/ui/action-bar/action-bar.component.scss
@@ -1,9 +1,10 @@
-.title-box {
-  // border-bottom: #A0A0F0 2px solid;
-  box-shadow: 0 0 4px 1px rgba(255, 255, 255, 0.73);
-  padding   : 5px;
+// N A V B A R
+.neocom-navbar{
+       padding: 5px;
 }
-
+.neocom-brand{
+       padding: 0px;
+}
 .title {
   color      : orange;
   font-family: "Elemental";
@@ -17,3 +18,9 @@
   font-size  : 24px;
   text-shadow: 0 0 6px white;
 }
+
+// .title-box {
+//   // border-bottom: #A0A0F0 2px solid;
+//   box-shadow: 0 0 4px 1px rgba(255, 255, 255, 0.73);
+//   padding   : 5px;
+// }
