-[INFINITY] Replacing awesome icon.
Former-commit-id: 80dce7abfff40b324fd2a3fc71c515d1ff7a31bd

--- a/NeoCom.Infinity/src/app/modules/authentication/validate-authorization-page/validate-authorization-page.component.html
+++ b/NeoCom.Infinity/src/app/modules/authentication/validate-authorization-page/validate-authorization-page.component.html
@@ -19,7 +19,7 @@
       <td width="80% " class="neocom-panel-column">
         <div>
           &nbsp;
-          <fa name="cog" animation="spin" size="1x"></fa>&nbsp;
+          <i class="fa fa-cog" id="ts24"></i>&nbsp;
           <span class="" id="neocom-ts16">Processing credential validation.</span><br>
         </div>
       </td>
