--- a/NeoCom.Infinity/src/styles.scss
+++ b/NeoCom.Infinity/src/styles.scss
@@ -10,7 +10,7 @@
 //-- ADDITIONAL MODULES STYLES
 @import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
 @import "~font-awesome/css/font-awesome.css"; // additional styles from fontawesome
-@import './styles/toaster.css'; // angular5-toaster module additional styles
+// @import './styles/toaster.css'; // angular5-toaster module additional styles
 
 //--- APPLICATION STYLES VARIABLES
 @import "./styles/_scss_variables.scss";
@@ -20,7 +20,7 @@
 @import "./styles/dragdrop-styles.css";
 //--- APPLICATION GLOBAL DEFINITION STYLES
 @import "./styles/ui-styles.scss";
-@import "./styles/neocom-styles.scss";
+// @import "./styles/neocom-styles.scss";
 
 body {
   background-color: black;
