-[INFINITY] Removed some older and unused interfaces and code. -[INFINITY][BUG] Current version 4.0.3 of the oath package does not support the 'code' flow. Updated manually to the latest version and replaced the npm package by a dist library.
Former-commit-id: bc5fccd8ea35829d33d98db81575a086c4913be4

--- a/NeoCom.Infinity/projects/NeoCom-Login/src/app/pages/welcome-page/welcome-page.component.html
+++ b/NeoCom.Infinity/projects/NeoCom-Login/src/app/pages/welcome-page/welcome-page.component.html
@@ -1,5 +1,5 @@
 <!-- <neocom-action-bar [titleLeft]="'WELCOME'" [subtitle]="'Click button to authorize credential.'"></neocom-action-bar> -->
-<div>
+<div class="neocom-panel" id="panelborder-blue">
   <p class="welcome-message">
     Welcome to the NeoCom Infinity helper for industrialists.
   </p>
@@ -25,7 +25,7 @@
   <div>
     <!-- <a class="authorization-button button-size" (click)="launchLogin()"> -->
     <!-- <div *ngIf="!working">ESI Authorization</div> -->
-    <button *ngIf="!working" type="button" class="btn btn-default button-size authorization-button" (click)="launchLogin()">ESI Authorization</button>
+    <button *ngIf="!working" type="button" class="btn btn-default button-green button-size button-position login-button" (click)="launchLogin()">ESI Authorization</button>
     <div *ngIf="working" class="login-box">
       <i class="fa fa-cog" id="ts24"></i>
       <span class="validating-label">Validating Authorization...</span>
