--- a/NeoCom.Infinity/projects/NeoCom-Login/src/app/pages/welcome-page/welcome-page.component.scss
+++ b/NeoCom.Infinity/projects/NeoCom-Login/src/app/pages/welcome-page/welcome-page.component.scss
@@ -1,61 +1,76 @@
 //--- APPLICATION STYLES VARIABLES
 // @import "app/../styles/_scss_variables.scss";
-
 // B U T T O N    S T Y L E S
 .button-size {
-  line-height: 3;
-  font-size      : 30px;
-  font-weight    : 800;
-  height         : 120px;
-  // justify-content: center;
-  margin-top     : 50px;
-  // padding-top    : 50px;
-  width          : 400px;
+  line-height: 2;
+  font-size: 30px;
+  font-weight: 800;
+  font-family: 'Prototype', sans-serif; // height: 120px;
+  // margin-top: 50px;
+  min-width: 350px;
+  padding: 4px 24px;
+  background: transparent;
 }
-.authorization-button {
+
+.button-position {
+  // margin-left: 30px;
+  margin-top: 16px;
+  // width: 50%;
+  // font-size: 24px;
+  // line-height: 3;
+}
+
+.button-green {
+  color: green;
+  border: 3px solid green;
+  border-radius  : 8px;
+}
+
+.button-green:hover {
+  color: white;
+  background: green;
+}
+
+.button-green:disabled {
+  color: black;
+  border: 3px solid darkgrey;
+}
+
+.login-button {
   background-color: #A0EA7B;
-  border-radius   : 10px;
-  color:white;
+  border-radius: 10px;
+  color: white;
 }
+
 .authorization-button:hover {
   background-color: #50B71D;
 }
 
 .submit-button {
-  margin-left  : 30px;
-  width        : 50%;
-  font-size    : 24px;
-  line-height  : 3;
+  margin-left: 30px;
+  width: 50%;
+  font-size: 24px;
+  line-height: 3;
   margin-bottom: 20px;
 }
 
 
-.button-position {
-  margin-left: 30px;
-  margin-top : 80px;
-  width      : 50%;
-  font-size  : 24px;
-  line-height: 3;
-}
-
-
-
 .login-box {
-  display        : flex;
+  display: flex;
   justify-content: center;
 }
 
 .validating-label {
-  font-size   : 22px;
-  font-weight : 600;
+  font-size: 22px;
+  font-weight: 600;
   margin-right: 10px;
-  margin-top  : 10px;
+  margin-top: 10px;
 }
 
 .welcome-message {
-  font-size   : 24px;
-  margin-left : 30px;
+  font-size: 24px;
+  margin-left: 30px;
   margin-right: 50px;
-  margin-top  : 10px;
-  padding-top : 10px;
+  margin-top: 10px;
+  padding-top: 10px;
 }
