--- a/NeoCom.Infinity/projects/NeoCom-Login/src/styles.scss
+++ b/NeoCom.Infinity/projects/NeoCom-Login/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+//-- ADDITIONAL MODULES STYLES
+@import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+@import "~font-awesome/css/font-awesome.css"; // additional styles from fontawesome
+@import './styles/toaster.css'; // angular5-toaster module additional styles
+
+//--- APPLICATION STYLE VARIABLES
+// @import "./styles/_scss_variables.scss";
+//--- APPLICATION STYLE PACKS
+@import "./styles/font-styles.css";
+@import "./styles/panel-styles.scss";
+
+body {
+  background-color: black;
+  color: white;
+  font-family: 'Proxima Nova', sans-serif;
+  font-size: 12px;
+  line-height: 1.0;
+  margin: 2px;
+}
