--- a/NeoCom.Infinity/projects/NeoCom-Login/src/styles/panel-styles.scss
+++ b/NeoCom.Infinity/projects/NeoCom-Login/src/styles/panel-styles.scss
@@ -7,6 +7,63 @@
 //               the second is the java microservices that compose the web application backend made with
 //               SpringBoot technology and finally the web ui code made in typescript within the Angular
 //               framework.
+// --- APPLICATION FONT VARIABLES
+$neocom-line-height    : 1.0;
+
+//--- APPLICATION COLOR TABLES
+// - APPLICATION COLORS
+$app-red-70: #FF6666; // Red 70%
+$app-red-30: #990000; // Red 30%
+$app-pale-red-color: $app-red-30;
+
+// - BACKGROUND COLORS
+$panel-background-color: #080808;
+$background-tint-red   : #250000;
+$background-tint-orange: #301000;
+$background-tint-yellow: #303000;
+$background-tint-blue  : #080825;
+$background-tint-green : #052406;
+$background-tint-white : #252525;
+
+$expandable-name-color: white;
+$selectable-name-color : orange;
+$marked-name-color     : #50B71D; //--- FONT CHARACTERISTICS
+$default-text-size     : 14px; // $bold-weight           : 500;
+$selected-text-size    : 16px; // --- PANEL MARGIN VARIABLES
+// $neocom-default-margin: 2px;
+//--- PANEL DEFINITION
+// $panel-margin: 2px;
+$panel-padding         : 2px; // --- PANEL VARIABLES
+$panel-background-color: #080808;
+$panel-border-color    : #404040;
+$panel-opacity         : 0.8;
+$panel-corner-height   : 6px;
+$panel-corner-width    : 6px;
+$panel-repositioning   : -1px; // %panelborder {
+//   line-height: $neocom-line-height;
+//   background-color: $panel-background-color;
+//   height: auto;
+//   margin-bottom: $neocom-default-margin;
+//   opacity: $panel-opacity;
+//   position: relative;
+//   border-width: 1px 1px 1px 1px;
+//   border-color: $panel-border-color;
+//   border-style: solid;
+// }
+$label-size: 8px;
+
+//--- ADDITIONAL COLORS
+$light-orange-85: #FFE6B3;
+
+//--- TEXT VARIABLES
+$bold-weight: 800;
+$semibold-weight: 600;
+$regular-weight: 400;
+$thin-weight: 200;
+$classname-color: #3D3DE6;
+$classname-size: 11px;
+$classname-bold: 500;
+
 //--- PANEL MARGIN VARIABLES
 $panel-default-font: 'Din-1451';
 $panel-margin: 2px;
@@ -24,9 +81,9 @@ $panel-corner-marker-displacement: -1px; //--- P A N E L S
   // font-family     : $panel-default-font;
   height          : auto;
   line-height     : $neocom-line-height;
-  margin          : $panel-margin;
+  // margin          : $panel-margin;
   opacity         : $panel-default-opacity;
-  position        : relative;
+  // position        : relative;
 }
 
 .neocom-panel-container {
