--- a/NeoCom.Infinity/projects/NeoCom-Login/src/styles.scss
+++ b/NeoCom.Infinity/projects/NeoCom-Login/src/styles.scss
@@ -1,13 +1,13 @@
 //-- ADDITIONAL MODULES STYLES
-@import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
-@import "~font-awesome/css/font-awesome.css"; // additional styles from fontawesome
-@import './styles/toaster.css'; // angular5-toaster module additional styles
+// @import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+// @import "~font-awesome/css/font-awesome.css"; // additional styles from fontawesome
+// @import './styles/toaster.css'; // angular5-toaster module additional styles
 
 //--- APPLICATION STYLE VARIABLES
-// @import "./styles/_scss_variables.scss";
+@import "./styles/_scss_variables.scss";
 //--- APPLICATION STYLE PACKS
 @import "./styles/font-styles.css";
-@import "./styles/panel-styles.scss";
+@import "./styles/new-panel-styles.scss";
 
 body {
   background-color: black;
