--- a/NeoCom.Infinity/src/app/modules/shared/pages/welcome-page/welcome-page.component.html
+++ b/NeoCom.Infinity/src/app/modules/shared/pages/welcome-page/welcome-page.component.html
@@ -4,7 +4,8 @@
     Welcome to the NeoCom Infinity helper for industrialists.
   </p>
   <p class="welcome-message">
-    Log in with your Eve Online credentials on the ESI login portal to get access to a capsuleer dedicated Industrialist Management System.
+    Log in with your Eve Online credentials on the ESI login portal to get access to a capsuleer dedicated
+    Industrialist Management System.
   </p>
   <span class="welcome-message">
     Services provided are:
@@ -23,13 +24,20 @@
 </div>
 <div class="login-box">
   <div>
+    <div class="panel-red">TEST PANEL<br>TEST PANEL</div>
     <!-- <a class="authorization-button button-size" (click)="launchLogin()"> -->
     <!-- <div *ngIf="!working">ESI Authorization</div> -->
-    <button *ngIf="!working" type="button" class="btn btn-default button-green button-size button-position login-button" (click)="launchLogin()">ESI Authorization</button>
-    <div *ngIf="working" class="login-box">
+    <div id="centered-container">
+      <button *ngIf="!working" type="button" class="button-position panel-green button-green login-button"
+        (click)="launchLoginTranquility()">ESI Authorization Tranquility</button>
+    </div>
+    <div id="centered-container">
+      <button *ngIf="!working" type="button" class="button-position panel-blue button-blue"
+        (click)="launchLoginSingularity()">ESI Authorization Singularity</button>
+      <!-- <div *ngIf="working" class="login-box">
       <i class="fa fa-cog" id="ts24"></i>
       <span class="validating-label">Validating Authorization...</span>
-     </div>
-    <!-- </a> -->
+    </div> -->
+    </div>
   </div>
 </div>
