-[FRONTEND] Create the landing page from the ESI login validation service and connect to the minimum backend set for this functionality. -[ACCEPTANCE] Start the acceptance test for the new developed code and use the cucumber plugin. -NIF01.01-Check the Application name rendered
Former-commit-id: be1bac1ada7d432c237a61ca412ba263f2a6c4ca

--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,1 +1,3 @@
 <p>login-validation-page works!</p>
+<app-info-panel id="app-info-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
+</app-info-panel>
