-[FRONTEND] Added the font, styles and other configuration to get the right panel displey. -[VISUALTEST] Create the code to test the App Name Panel visually. -[BUG] Fix the copyright label error.
Former-commit-id: aebd1d10c8b91a8d6cf11a67a16d7c5c5a39ae2e

--- a/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
@@ -1,2 +1,5 @@
-<p>app-info-panel works!</p>
-<span class="app-name">{{name}}</span><span class="app-version">{{version}}</span>
+<div class="neocom-panel panel-white app-info-panel" id2="panelborder-white">
+    <span class="app-name elemental-ff">{{name}}</span>
+    <span class="app-version mons-olympia-ff" style="margin-left:10px;">{{version}}</span>
+    <span class="app-copyright mons-olympia-ff">© 2019,2020 Dimensinfin Industries</span>
+</div>
