-[BACKEND] Reinitialize the project with the modules already active and operative from Citas.
Former-commit-id: d16e3042fb5d89f996f1da86473ae58d0b8773f7

--- a/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.scss
+++ b/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.scss
@@ -9,8 +9,8 @@
 }
 .app-version{
     font-size: 20px;
-    color: #50B71D;
-    text-shadow: 0px 0px 6px #50B71D;
+    color: yellow;
+    // text-shadow: 0px 0px 6px yellow;
 }
 .app-copyright{
     font-size: 10px;
