--- a/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
@@ -1,5 +1,5 @@
 <div class="neocom-panel panel-white app-info-panel" id2="panelborder-white">
     <span class="app-name elemental-ff">{{name}}</span>
     <span class="app-version mons-olympia-ff" style="margin-left:10px;">{{version}}</span>
-    <span class="app-copyright mons-olympia-ff">© 2019,2020 Dimensinfin Industries</span>
+    <span class="app-copyright mons-olympia-ff">{{getCopyright()}}</span>
 </div>
