-[CONFIGURATION] Add the code coverage functionality.
Former-commit-id: 14bab71e3c93e8ffecdddafdd329216dd49dc226

--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,3 +1,2 @@
-<p>login-validation-page works!</p>
-<app-info-panel id="app-info-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
+<app-info-panel id="appinfo-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
 </app-info-panel>
