--- a/NeoCom.Infinity.Frontend/src/styles.scss
+++ b/NeoCom.Infinity.Frontend/src/styles.scss
@@ -1,7 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+// - ADDITIONAL MODULES STYLES
 @import "~bootstrap/dist/css/bootstrap.css"; // bootstrap styles
+@import './styles/toaster.css'; // angular5-toaster module additional styles
 // - APPLICATION STYLES VARIABLES
 @import "./styles/_scss_variables.scss";
+
+// - APPLICATION STYLE PACKS
+@import "./styles/open-sans.css";
 @import "./styles/font-styles.css";
-// @import "./styles/panel-styles.scss"; // bootstrap styles
-@import "./styles/new-panel-styles.scss"; // bootstrap styles
+@import "./styles/panel-styles.scss";
+body {
+    background-color: white;
+    color: black;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    line-height: 1.0;
+    margin: 2px;
+  }
