--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,2 +1,6 @@
 <app-info-panel id="appinfo-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
 </app-info-panel>
+<login-validation-progress></login-validation-progress>
+<div *ngIf="validationException">
+    <login-validation-exception></login-validation-exception>
+</div>
