--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,6 +1,6 @@
 <app-info-panel id="appinfo-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
 </app-info-panel>
-<login-validation-progress></login-validation-progress>
+<app-login-validation-progress id="loginvalidationprogress-panel"></app-login-validation-progress>
 <div *ngIf="validationException">
-    <login-validation-exception></login-validation-exception>
+    <app-login-validation-exception id ="loginvalidationexception-panel"></app-login-validation-exception>
 </div>
