-[FRONTEND] Written the code to call the backend and process a valid response. -[FRONTEND] Added service code to perform calls to the mock server using the proxy tunnel. -[FRONTEND] Added a minor exception handling.
Former-commit-id: 7b130e3210a1bc927dca7abfee0c86496ca7b9fb

--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -2,5 +2,6 @@
 </app-info-panel>
 <app-login-validation-progress id="loginvalidationprogress-panel"></app-login-validation-progress>
 <div *ngIf="validationException">
-    <app-login-validation-exception id ="loginvalidationexception-panel"></app-login-validation-exception>
+    <app-login-validation-exception id ="loginvalidationexception-panel" exception="validationException">        
+    </app-login-validation-exception>
 </div>
