--- a/NeoCom.Infinity.Frontend/src/styles.scss
+++ b/NeoCom.Infinity.Frontend/src/styles.scss
@@ -9,8 +9,8 @@
 @import "./styles/font-styles.css";
 @import "./styles/panel-styles.scss";
 body {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     line-height: 1.0;
