--- a/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/app-info-panel/app-info-panel.component.html
@@ -1,4 +1,4 @@
-<div class="neocom-panel panel-white app-info-panel" id2="panelborder-white">
+<div class="neocom-panel panel-white app-info-panel">
     <span class="app-name elemental-ff">{{getName()}}</span>
     <span class="app-version mons-olympia-ff" style="margin-left:10px;">{{getVersion()}}</span>
     <span class="app-copyright mons-olympia-ff">{{getCopyright()}}</span>
