-[ACCEPTANCE] Added more acceptance tests for the login page. -[FEATURE] Added the rendering for the validation panel to display the  validation code received.
Former-commit-id: 04cbd34b3a4b5a3dbf2324c6b1c4d3b82557e0f9

--- a/NeoCom.Infinity.Frontend/src/app/panels/login-validation-progress/login-validation-progress.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/login-validation-progress/login-validation-progress.component.html
@@ -1,1 +1,4 @@
-<p>login-validation-progress works!</p>
+<div class="neocom-panel panel-blue panel-margin">
+    <span class="progress-label">Waiting for authenticating code...</span>
+    <span class="progress-code elemental-ff" style="margin-left:10px;">{{getCode()}}</span>
+</div>
