--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,7 +1,7 @@
 <app-info-panel id="appinfo-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
 </app-info-panel>
-<app-login-validation-progress id="loginvalidationprogress-panel"></app-login-validation-progress>
+<app-login-validation-progress id="loginvalidationprogress-panel" [code]="paramCode"></app-login-validation-progress>
 <div *ngIf="validationException">
-    <app-login-validation-exception id ="loginvalidationexception-panel" exception="validationException">        
+    <app-login-validation-exception id ="loginvalidationexception-panel" [exception]="validationException">        
     </app-login-validation-exception>
 </div>
