-[FRONTEND] Added the code to process the backend response with the token validation
Former-commit-id: 5b22967c6f7786de94eb8b46b563b5b35fe1d6ad

--- a/NeoCom.Infinity.Frontend/src/app/panels/login-validation-progress/login-validation-progress.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/login-validation-progress/login-validation-progress.component.html
@@ -1,4 +1,4 @@
 <div class="neocom-panel panel-blue panel-margin">
-    <span class="progress-label">Waiting for authenticating code...</span>
+    <span class="progress-label">Waiting for code authentication...</span>
     <span class="progress-code elemental-ff" style="margin-left:10px;">{{getCode()}}</span>
 </div>
