-[NIF01.03]-Check that the Login Validation Page has all only two panels when correct parameters and that should return a valid JWT token along a Credential. -[TESTING] Added the code coverage for the new developed code.
Former-commit-id: f4cfc41013210253e95a3fbcc0ef4ef49c3323ba

--- a/NeoCom.Infinity.Frontend/src/app/panels/login-validation-exception/login-validation-exception.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/panels/login-validation-exception/login-validation-exception.component.html
@@ -1,2 +1,4 @@
-<p>login-validation-exception works!</p>
-<div>{{getMessage()}}</div>
+<div class="neocom-panel panel-red panel-margin">
+    <span class="exception-label">Exception: {{getExceptionType()}}</span>
+    <span class="exception-message">{{getMessage()}}</span>
+</div>
