-[FRONTEND] New dashboard page to show the Corporation data, the current logged Pilot data and the functionality selection toolbar.
Former-commit-id: 3d49d90e58eb1500b7dd3e50dacb2a30871553d4

--- a/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/login-validation-page/login-validation-page.component.html
@@ -1,5 +1,4 @@
-<app-info-panel id="appinfo-panel" class="neocom-panel" [name]="getAppName()" [version]="getAppVersion()">
-</app-info-panel>
+<!-- <app-info-panel id="appinfo-panel" class="neocom-panel"></app-info-panel> -->
 <app-login-validation-progress id="loginvalidationprogress-panel" [code]="paramCode"></app-login-validation-progress>
 <div *ngIf="validationException">
     <app-login-validation-exception id ="loginvalidationexception-panel" [exception]="validationException">        
