-[NIF02.01]-Check that the Dashboard Home Page has the server information panel. -[TESTING] Fixed test errors and increased code coverage for new code. -[FRONTEND] Added a new component to display the server status.
Former-commit-id: f2c28bf5abca38bb0f0b71ed5412953b16626a01

--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
@@ -1,2 +1,4 @@
-<p>dashboard-home-page works!</p>
-<app-info-panel id="appinfo-panel" class="neocom-panel"></app-info-panel>
+<div class="page-container">
+<app-info-panel id="appinfo-panel" class="neocom-panel app-info-panel"></app-info-panel>
+<server-info-panel style="flex-grow: 1;"></server-info-panel>
+</div>
